--- a/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
+++ b/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 22:01:45 GMT
+    - Sun, 25 Mar 2018 16:18:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OwqGrRgvHXFkJ2eDhdA7y1; path=/
+    - PHPSESSID=rqPEc6bcH7w8G%2CABOnu4m0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 22:01:46 GMT
+recorded_at: Sun, 25 Mar 2018 16:18:24 GMT
