--- a/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
+++ b/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 22:27:27 GMT
+    - Sun, 25 Mar 2018 16:39:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x1hkivTJDZVYXfeso9i651; path=/
+    - PHPSESSID=0%2CswUcHTrtYSh%2Ch6fiIL70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 22:27:28 GMT
+recorded_at: Sun, 25 Mar 2018 16:39:07 GMT
