--- a/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
+++ b/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 22:27:45 GMT
+    - Sun, 25 Mar 2018 16:39:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tu-ffB109a9jxixoGv1NA2; path=/
+    - PHPSESSID=shz6o4-K%2Cbd4d9WDVGdiR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 22:27:45 GMT
+recorded_at: Sun, 25 Mar 2018 16:39:59 GMT
