--- a/www.nass.gov.ng/293072e6471b83a11a72a66cc6a8b9e5a1b1f158.yml
+++ b/www.nass.gov.ng/293072e6471b83a11a72a66cc6a8b9e5a1b1f158.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 22:36:30 GMT
+    - Sun, 25 Mar 2018 16:49:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2M3wYUp3dlqiKDxV%2Cz0Yz2; path=/
+    - PHPSESSID=jBFnVjHpsEHy0DlUErMB82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 22:36:30 GMT
+recorded_at: Sun, 25 Mar 2018 16:49:16 GMT
